test/statements/opEquals/overloadLogicalOpEquals.good
overloadLogicalOpEquals.chpl:1: error: '&&=' operator may not be overloaded
overloadLogicalOpEquals.chpl:2: error: '||=' operator may not be overloaded
